--- a/haxball_site/templates/core/include/post_important_in_list.html
+++ b/haxball_site/templates/core/include/post_important_in_list.html
@@ -19,12 +19,18 @@
     </div>
 
     <div class="card-footer px-3 py-1 d-inline-flex justify-content-between" style="border-radius:0px 0px 20px 20px;">
-        <span class="text-muted">
+        <!-- <span class="text-muted">
             <i class="fa fa-calendar text-primary" aria-hidden="true"></i>  {{ post.created|date:"SHORT_DATE_FORMAT" }}
             <i class="fa fa-clock-o text-primary" aria-hidden="true"></i>{{ post.created|time:"H:i" }}<a
                     href="{{ post.author.user_profile.get_absolute_url }}" class="fa fa-user-o text-primary pl-1">{{ post.author }}</a>,
             <i class="fa fa-comments-o text-primary" aria-hidden="true"></i>{{ post.comments.count }}
-        </span>
+        </span> -->
+                <span class="text-muted"> <img src="{% static "img/ico/calendar_1.png" %}" height="21"
+                                       width="21">  {{ post.created|date:"SHORT_DATE_FORMAT" }} <img
+                src="{% static "img/ico/clock_1.png" %}" height="19" width="19"> {{ post.created|time:"H:i" }} <img
+                src="{% static "img/ico/user_1.png" %}" height="19" width="19"><a
+                href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
+            Комментариев: {{ post.comments.count }}</span>
 
 
 
