--- a/haxball_site/templates/account/login.html
+++ b/haxball_site/templates/account/login.html
@@ -4,12 +4,12 @@
 {% load account %}
 {#  socialaccount #}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
-{% block styles %}
-    <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
-{% endblock %}
-{% block post %}
+{% block title %}{% trans "Sign In" %}{% endblock %}
 
+
+{% block post %}
+<div class="card">
+    <div class="card-header text-center">
     {#% get_providers as socialaccount_providers %#}
     <h1>{% trans "Sign In" %}</h1>
     {% if socialaccount_providers %}
@@ -30,18 +30,21 @@
         {% include "socialaccount/snippets/login_extra.html" %}
 
     {% else %}
-        <p>{% blocktrans %}If you have not created an account yet, then please
-            <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+        <p>Если у вас нету аккаунта, сперва
+            <a href="{{ signup_url }}">зарегистрируйтесь</a>.</p>
     {% endif %}
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
         {% csrf_token %}
+        <div class="form-group">
         {{ form.as_p }}
+        </div>
         {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
         {% endif %}
         <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
         <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
     </form>
-
+    </div>
+</div>
 {% endblock %}
