--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -12,79 +12,85 @@
         <div class="page-name"> !</div>
     </a>
     <div class="mr-100">
-<iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&default-sum=200&button-text=14&yamoney-payment-type=on&button-size=m&button-color=black&successURL=&quickpay=small&account=410011043451485&" width="250" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>        </div>
+        <iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&default-sum=200&button-text=14&yamoney-payment-type=on&button-size=m&button-color=black&successURL=&quickpay=small&account=410011043451485&"
+                width="250" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+    </div>
 </nav>
 
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark d-flex bd-highlight mb-0 sticky-top">
     <!-- Brand -->
     <a class="navbar-brand" href="{% url 'core:home' %}">Главная</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <!-- Links -->
-    <ul class="navbar-nav mr-auto p-2 bd-highlight">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                Чемпионат
-            </a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Вышка</a>
-                <a class="dropdown-item" href="#">Пердив</a>
-                <a class="dropdown-item" href="#">Кубок</a>
-                <a class="dropdown-item" href="#">Регламент</a>
-                <a class="dropdown-item" href="#">Переносы</a>
-                <a class="dropdown-item" href="#">Трансферы</a>
-                <a class="dropdown-item" href="#">Свободные агенты</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Турниры</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:fastcups' %}">Фасткапы</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:lives' %}">Трансляции</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                Архив
-            </a>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Сезон 1</a>
-                <a class="dropdown-item" href="#">Сезон 2</a>
-            </div>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Администрация</a>
-        </li>
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto p-2 bd-highlight">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    Чемпионат
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Вышка</a>
+                    <a class="dropdown-item" href="#">Пердив</a>
+                    <a class="dropdown-item" href="#">Кубок</a>
+                    <a class="dropdown-item" href="#">Регламент</a>
+                    <a class="dropdown-item" href="#">Переносы</a>
+                    <a class="dropdown-item" href="#">Трансферы</a>
+                    <a class="dropdown-item" href="#">Свободные агенты</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'core:tournaments' %}">Турниры</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'core:fastcups' %}">Фасткапы</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'core:lives' %}">Трансляции</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                    Архив
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Сезон 1</a>
+                    <a class="dropdown-item" href="#">Сезон 2</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="modal" data-target="#adminsModal">
+                    Администрация
+                </a>
+                <!-- <a class="nav-link" href="{% url 'core:admins' %}">Администрация</a> -->
+            </li>
 
-        <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:forum' %}">Форум</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'core:forum' %}">Форум</a>
+            </li>
 
 
-        <!-- Dropdown -->
+            <!-- Dropdown -->
 
 
-    </ul>
+        </ul>
 
-    {% if user.is_authenticated %}
-        <a class="p-2" href="{{ user.user_profile.get_absolute_url }}">{{ user.username }}</a>
-    {% else %}
-        <a role="button" class="btn btn-success mr-1" href="{% url 'account_signup' %}">Регистрация</a>
-    {% endif %}
+        {% if user.is_authenticated %}
+            <a class="p-2" href="{{ user.user_profile.get_absolute_url }}">{{ user.username }}</a>
+        {% else %}
+            <a role="button" class="btn btn-success mr-1" href="{% url 'account_signup' %}">Регистрация</a>
+        {% endif %}
 
-    {% if user.is_authenticated %}
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#logoutModal">
-        Выход
-    </button>
-    {% else %}
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
-        Вход
-    </button>
-    {% endif %}
+        {% if user.is_authenticated %}
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#logoutModal">
+                Выход
+            </button>
+        {% else %}
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
+                Вход
+            </button>
+        {% endif %}
     </div>
 
     <!-- Button to Open the Modal -->
