--- a/haxball_site/templates/core/tournaments/tournaments_list.html
+++ b/haxball_site/templates/core/tournaments/tournaments_list.html
@@ -101,14 +101,15 @@
 
 {% endblock %}
 
-{% block title %}Трансляции{% endblock %}
+{% block title %}Турниры{% endblock %}
+
 {% block postlist %}
 <div class="card my-2"
      style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
 
     <div class="card-body">
-        <h3 class="text-center mt-1 mb-0"><i class="fa fa-desktop" aria-hidden="true"></i>
-            Трансляции
+        <h3 class="text-center mt-1 mb-0"><img src="{% static "img/ico/pocal_1.png" %}" height="35"
+                                       width="40">Турниры
         </h3>
         <hr>
 
