--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -10,6 +10,20 @@
         }
     </style>
 {% endblock %}
+{% block scripts %}
+    <script>
+
+        function myFunction() {
+            var discord = document.getElementById("discord");
+            navigator.clipboard.writeText(discord.title)
+
+            alert("Скопировано " + discord.title);
+
+        }
+
+    </script>
+{% endblock %}
+
 {% block title %}Профиль {{ profile.name }} {% endblock %}
 
 {% block profile_of_user %}
@@ -22,13 +36,13 @@
                     <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="100%"
                                              class="img-radius" alt="User-Profile-Image"></div>
                     <h4 class="f-w-600">{{ profile.name }}
-                    {% if profile.name.is_superuser %}
-                        <img src="{% static "img/ico/my_crown_1.png" %}" height="16" width="16"
-                             title="creator">
-                    {% elif profile.name.is_staff %}
-                        <img src="{% static "img/ico/sheriff_badge_1.png" %}" height="16" width="16"
-                             title="sheriff">
-                    {% endif %}
+                        {% if profile.name.is_superuser %}
+                            <img src="{% static "img/ico/my_crown_1.png" %}" height="16" width="16"
+                                 title="creator">
+                        {% elif profile.name.is_staff %}
+                            <img src="{% static "img/ico/sheriff_badge_1.png" %}" height="16" width="16"
+                                 title="sheriff">
+                        {% endif %}
                     </h4>
                     <p class="mb-1">Без команды</p>
                     <p>Рейтинг {% karma profile %}</p>
@@ -38,8 +52,8 @@
                                     src="{% static "img/ico/vk_1.png" %}" height="41" width="41" title="vk"></a>
                         {% endif %}
                         {% if profile.discord %}
-                                <img src="{% static "img/ico/discord_1.png" %}" onclick="myFunction()" id=discord
-                                     height="41" width="41" title="{{ profile.discord }}">
+                            <img src="{% static "img/ico/discord_1.png" %}" onclick="myFunction()" id=discord
+                                 height="41" width="41" title="{{ profile.discord }}">
                         {% endif %}
                         {% if profile.telegram %}
                             <a href="https://t.me/{{ profile.telegram }}" target="_blank"><img
@@ -121,20 +135,11 @@
         </div>
     </div>
 
-    <script>
 
-        function myFunction() {
-            var discord = document.getElementById("discord");
-            navigator.clipboard.writeText(discord.title)
-
-            alert("Скопировано " + discord.title);
-
-        }
-
-    </script>
 
 
 
 
 
 {% endblock %}
+
