--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -15,10 +15,8 @@
 
         function myFunction() {
             var discord = document.getElementById("discord");
-            navigator.clipboard.writeText(discord.title)
-
+            navigator.clipboard.writeText(discord.title);
             alert("Скопировано " + discord.title);
-
         }
 
     </script>
