--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -60,10 +60,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" data-toggle="modal" data-target="#adminsModal">
+                <!-- <a class="nav-link" data-toggle="modal" data-target="#adminsModal">
                     Администрация
-                </a>
-                <!-- <a class="nav-link" href="{% url 'core:admins' %}">Администрация</a> -->
+                </a>-->
+                <a class="nav-link" href="{% url 'core:admins' %}">Администрация</a>
             </li>
 
             <li class="nav-item">
