--- a/haxball_site/templates/core/admins/admin_list.html
+++ b/haxball_site/templates/core/admins/admin_list.html
@@ -18,7 +18,8 @@
                 {% if user.is_superuser %}
                     <h4><a href="{{ user.user_profile.get_absolute_url }}"><img
                             src="{% static "img/ico/my_crown_1.png" %}" height="16" width="16"
-                            title="creator">{{ user.username }}</a>
+                            title="{% for group in user.groups.all %}{{ group.name }}{% endfor %}">{{ user.username }}
+                    </a>
                         <span class="small text-muted">
                             {% for group in user.groups.all %}
                                 {{ group.name }}
@@ -30,8 +31,9 @@
                 {% if user.is_staff and not user.is_superuser %}
                     <h4><a href="{{ user.user_profile.get_absolute_url }}"><img
                             src="{% static "img/ico/sheriff_badge_1.png" %}" height="16" width="16"
-                            title="sheriff">{{ user.username }}</a>
-                    <span class="small text-muted">
+                            title="{% for group in user.groups.all %}{{ group.name }}{% endfor %}">{{ user.username }}
+                    </a>
+                        <span class="small text-muted">
                             {% for group in user.groups.all %}
                                 {{ group.name }}
                             {% endfor %}
