--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <nav class="navbar navbar-light navbar_color nav-fill"
-     style=background-image:url({% static "img/backgrounds/background_112.jpg" %})>
+     style=background-image:url({% static "img/backgrounds/background_114.jpg" %})>
 
     <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
@@ -56,8 +56,12 @@
                     Архив
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Сезон 1</a>
-                    <a class="dropdown-item" href="#">Сезон 2</a>
+                    <a class="dropdown-item" href="#">ЧР #1</a>
+                    <a class="dropdown-item" href="#">ЧР #2</a>
+                    <a class="dropdown-item" href="#">ЧР #3</a>
+                    <a class="dropdown-item" href="#">ЧР #4</a>
+                    <a class="dropdown-item" href="#">ЛЧ #1</a>
+
                 </div>
             </li>
 
