--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -74,7 +74,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link" href="http://185.7.145.91/post/16/rules">Правила</a>
+                <a class="nav-link" href="http://www.cis-haxball.com/post/16/rules">Правила</a>
             </li>
 
 
