--- a/haxball_site/templates/core/include/post_important_in_list.html
+++ b/haxball_site/templates/core/include/post_important_in_list.html
@@ -32,7 +32,8 @@
                 href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
             <i class="fa fa-comments-o text-primary" aria-hidden="true"></i>
                  {{ post.comments.count }},
-            <i class="fa fa-eye text-primary" aria-hidden="true"></i>{{ post.views }}
+            <i class="fa fa-eye text-primary" aria-hidden="true"></i>
+                    {{ post.views }}
                 </span>
 
 
