--- a/haxball_site/templates/core/include/forum/last_activity_in_category.html
+++ b/haxball_site/templates/core/include/forum/last_activity_in_category.html
@@ -1,7 +1,9 @@
 <span>
     {% if last_act %}
+        <i class="fa fa-reply text-success" aria-hidden="true"></i>
         {{ last_act|timesince }} назад
     {% else %}
-        NONE!!!!!!
+            <i class="fa fa-times text-danger" aria-hidden="true"></i>
+            Здесь ещё никто не писал
     {% endif %}
 </span>
