--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -44,7 +44,8 @@
                     </h4>
                     <p class="mb-1">Без команды</p>
                     <p class="mb-0">Рейтинг {% karma profile %}</p>
-                    <p>Просмотров <i class="fa fa-eye text-warning" aria-hidden="true"></i>{{ profile.views }}</p>
+                    <p>Просмотров <i class="fa fa-eye text-warning" aria-hidden="true"></i>
+                        {{ profile.views }}</p>
                     <p class="mb-0">
                         {% if profile.vk %}
                             <a href="https://vk.com/{{ profile.vk }}" target="_blank"><img
