--- a/haxball_site/templates/account/email_confirm.html
+++ b/haxball_site/templates/account/email_confirm.html
@@ -1,34 +1,42 @@
-{% extends "account/base.html" %}
-
-{% load i18n %}
+{% extends "core/home.html" %}
+{% load static %}
 {% load account %}
+{% load i18n %}
 
-{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+
+{% block title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-    <h1>{% trans "Confirm E-mail Address" %}</h1>
+{% block post %}
+    <div class="card mt-2">
+        <div class="card-header text-center">
+            <h1>{% trans "Confirm E-mail Address" %}</h1>
+        </div>
 
-    {% if confirmation %}
+        <div class="card-body">
 
-        {% user_display confirmation.email_address.user as user_display %}
+        {% if confirmation %}
 
-        <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that
-            <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}
-            .{% endblocktrans %}</p>
+            {% user_display confirmation.email_address.user as user_display %}
 
-        <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-            {% csrf_token %}
-            <button type="submit">{% trans 'Confirm' %}</button>
-        </form>
+            <p>{% blocktrans with confirmation.email_address.email as email %}Пожалуйста, подтвердите, что
+                <a href="mailto:{{ email }}">{{ email }}</a> является email-адресом для пользователя {{ user_display }}
+                .{% endblocktrans %}</p>
 
-    {% else %}
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}" class="text-center">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-success">{% trans 'Confirm' %}</button>
+            </form>
 
-        {% url 'account_email' as email_url %}
+        {% else %}
 
-        <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please
-            <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+            {% url 'account_email' as email_url %}
 
-    {% endif %}
+            <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please
+                <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+
+        {% endif %}
+        </div>
+    </div>
 
 {% endblock %}
